# ccw-mcp

./: .gitignore  AGENTS.md  IMPROVEMENTS.md  JSONRPC_FIX.md  README.md  claude_desktop_config.example.json  claude_desktop_config.windows.example.json  example_workflow.py  install.ps1  install.sh  pyproject.toml  test_jsonrpc_fix.py  test_server_init.py
ccw_mcp/: __init__.py  server.py
ccw_mcp/cel/: __init__.py  linux.py  portable.py  windows.py
ccw_mcp/policy/: __init__.py  engine.py
ccw_mcp/tools/: __init__.py  capsule.py  commute.py  deltamin.py  promote.py  witness.py
ccw_mcp/util/: __init__.py  diff.py  filesystem.py  hashing.py  logger.py  trace.py
docs/: ARCHITECTURE.md  CLAUDE-DESKTOP-INSTALL.md  QUICKSTART-WINDOWS.md  WINDOWS-SUMMARY.md  WINDOWS.md  jsonrpc-examples.md
tests/: __init__.py  test_basic.py  test_windows.py
