[project]
name = "ccw-mcp"
version = "0.1.0"
description = "Counterfactual & Certificate-Carrying MCP Server - Simulate before commit"
requires-python = ">=3.11"
dependencies = [
    "blake3>=0.4.1",
    "msgspec>=0.18.6",
    "psutil>=5.9.0",
]
authors = [
    {name = "CCW-MCP Team"}
]
readme = "README.md"

[project.scripts]
ccw-mcp = "ccw_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
